--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,16 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
+<header class=page-header>
+  <h1>
+    My movies
+    <small>Updated every movie night</small>
+  </h1>
+</header>
+
+<article class=movie>
+  <h2>Drive (2009)</h2>
+  <p class=rating>★★★★★</p>
+</article>
+
+<article class=movie>
+  <h2>Toy Story (1996)</h2>
+  <p class=rating>★★★★★</p>
+</article>
