--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,13 +2,16 @@
 <html>
 <head>
   <title>Movieapp</title>
+  <%= stylesheet_link_tag "http://railsgirls.com/assets/bootstrap.css" %>
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
 <body>
 
-<%= yield %>
+<div class=container>
+  <%= yield %>
+</div>
 
 </body>
 </html>
