allow editing of movie runtime
NOTE: attr_accessible

--- a/app/views/movies/_form.html.erb
+++ b/app/views/movies/_form.html.erb
@@ -23,6 +23,10 @@
     <%= f.label :rating %><br />
     <%= f.number_field :rating %>
   </div>
+  <div class="field">
+    <%= f.label :runtime %><br />
+    <%= f.number_field :runtime %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
