extract runtime, rating to helpers
NOTE: encoding header

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -11,13 +11,12 @@
 
   <% if movie.runtime.present? %>
   <span class=runtime>
-    <%= movie.runtime / 60 %>h
-    <%= movie.runtime % 60 %>min
+    <%= display_duration movie.runtime %>
   </span>
   <% end %>
 
   <p class=rating>
-    <%= "★" * movie.rating %>
+    <%= display_rating movie.rating %>
   </p>
 </article>
 <% end %>
