calculate and display total runtime

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -20,3 +20,10 @@
   </p>
 </article>
 <% end %>
+
+<hr>
+
+<p class=muted>
+  Total time spent watching:
+  <strong><%= display_duration @total_runtime %></strong>
+</p>
