allow adding and display note attached to a movie

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -18,6 +18,12 @@
   <p class=rating>
     <%= display_rating movie.rating %>
   </p>
+
+  <% if movie.note.present? %>
+  <p class="well well-small">
+    <%= movie.note %>
+  </p>
+  <% end %>
 </article>
 <% end %>
 
