--- a/app/views/movies/_form.html.erb
+++ b/app/views/movies/_form.html.erb
@@ -27,6 +27,10 @@
     <%= f.label :runtime %><br />
     <%= f.number_field :runtime %>
   </div>
+  <div class="field">
+    <%= f.label :note %><br />
+    <%= f.text_area :note %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
